--- a/COVID-19  forecasting (LSTM & GRADIENT BOOSTING)/covid19_lstm_xgb.ipynb
+++ b/COVID-19  forecasting (LSTM & GRADIENT BOOSTING)/covid19_lstm_xgb.ipynb
@@ -1421,7 +1421,7 @@
    ],
    "source": [
     "plt.figure(figsize=(14,4))\n",
-    "plt.title('TOP 20 COUNTRIES WITH MOST ACTIVE CASES')\n",
+    "plt.title('TOP 20 COUNTRIES WITH HIGHEST SURVIIVAL PROBABILITY')\n",
     "plt.xticks(rotation=30)\n",
     "sns.barplot(surv_prob.index, surv_prob['Survival Probability'], palette='Accent')\n"
    ]
